# Pake

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
