[package]
name = "app"
version = "0.1.0"
description = "Pake 打包工具"
authors = ["Tw93"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
windows = "0.44.0"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "2.0.0-alpha.3", features = ["api-all"] }
image = "0.24.5"
home = "0.5"
tauri-utils = "2.0.0-alpha.1"
webbrowser = "0.8.7"
webview2-com = "0.23.0"
webview2-com-sys = "0.23.0"
wry = "0.27.0"
dirs = "4.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
# Enable DevTools for debugging.
devtools = []
